# wallgen

./: .gitignore  ASSET_CREDITS.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
docs/: index.html
fluxwall/: __init__.py  __main__.py  cli.py  config.py  device.py  loras.py  models.py  organize.py  pipeline.py  prompts.py  upscale.py  webui.py
fluxwall/scheduler/: __init__.py  com.arslankazmi.fluxwall.daily.plist  daily_wallpaper.py  flux-wallpaper.cron
fluxwall/train/: __init__.py  dataset.py  train_lora.py
prompts/: wallpapers.txt
tests/: test_backends.py  test_cli.py  test_config.py  test_device.py  test_loras.py  test_models.py  test_organize.py  test_prompts.py
wallgen/: __init__.py  __main__.py  backends.py  cli.py  config.py  device.py  loras.py  organize.py  pipeline.py  prompts.py  webui.py
wallgen/scheduler/: com.arslankazmi.wallgen.daily.plist  daily_wallpaper.py  wallgen.cron
wallgen/train/: train_lora.py
wallgen/train/configs/: flux_lora_default.toml
