[project]
name = "wallgen"
version = "0.1.0"
description = "WallGen — hardware-aware self-hosted wallpaper generator (Z-Image-Turbo/FLUX/SD, MLX + Diffusers, quantized, LoRA-ready)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Arslan Kazmi" }]
dependencies = [
    # NOTE: torch is intentionally NOT here — its flavor (CPU vs CUDA) is provided
    # by the conflicting `cpu` / `cuda` dependency-groups below so the heavy CUDA
    # stack is never installed unless explicitly requested. `cpu` is a default group.
    "diffusers>=0.32",
    "transformers>=4.46",
    "accelerate>=1.0",
    "safetensors>=0.4",
    "gguf>=0.10",
    "sentencepiece>=0.2",
    "protobuf>=4",
    "pillow>=10",
    "psutil>=5.9",
    "pyyaml>=6",
    "typer>=0.12",
    "tqdm>=4.66",
    "huggingface-hub>=0.26",
    "hf-transfer>=0.1.9",
]

[project.optional-dependencies]
ui = ["gradio>=4.44"]
lora = ["peft>=0.13"]
train = ["peft>=0.13", "datasets>=3.0"]
# Apple Silicon fast path. mflux is macOS-arm64 only (pulls mlx) — the marker
# keeps the universal lock resolvable on Linux/Windows where it's unavailable.
mlx = ["mflux>=0.14; sys_platform == 'darwin' and platform_machine == 'arm64'"]

[project.scripts]
wallgen = "wallgen.cli:app"

# --- torch flavor lives in conflicting dependency groups -----------------------
# Default `uv sync` installs the lean CPU/MPS torch (the `cpu` group is a default
# group). CUDA is strictly opt-in: `uv sync --no-group cpu --group cuda`.
[dependency-groups]
cpu = ["torch>=2.4"]
cuda = ["torch>=2.4"]
dev = ["pytest>=8", "pytest-mock>=3.14", "httpx>=0.27"]

[tool.uv]
default-groups = ["cpu", "dev"]
# cpu/cuda torch flavors are mutually exclusive; the mlx extra (macOS arm64) is
# incompatible with the cuda group (Linux/Windows) — declare so uv forks them.
conflicts = [
    [{ group = "cpu" }, { group = "cuda" }],
    [{ extra = "mlx" }, { group = "cuda" }],
]

[tool.uv.sources]
torch = [
    # Linux/Windows: pin the CPU index so the multi-GB CUDA stack isn't pulled.
    # macOS: use the default PyPI wheel (already CPU/MPS, and the only place with
    # the newer torch that mflux needs) — so the cpu-index source skips Darwin.
    { index = "pytorch-cpu", group = "cpu", marker = "sys_platform != 'darwin'" },
    { index = "pytorch-cu124", group = "cuda", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["wallgen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
